@@ -47,6 +47,13 @@ mjb.includeVideoImages=false
 # Currently only works with TV Episodes
 mjb.includeWideBanners=false
 
+# Only download series banners and not specific season banners
+mjb.onlySeriesBanners=false
+
+# Attempt to download different series banners for each season
+# Works if "mjb.seriesOnlyBanners=false" and there are no season banners and "mjb.seriesOnlyBanners=true"
+mjb.cylceSeriesBanners=true
+
 # Maximum number of thumbnails per index page
 mjb.nbThumbnailsPerPage=10
 
